<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".fragments.DomainOrderFragment">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize">

        <ImageView
            android:id="@+id/myMyOrderBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            android:padding="15dp"
            android:src="@drawable/ic_back_24" />

        <TextView
            android:id="@+id/tolbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/myMyOrderBack"
            android:text="@string/domain_order"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/myOrderSubDomainList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_gradent"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:text="@string/sub_domain_list"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">
        <include
            android:id="@+id/search_box_container"
            layout="@layout/search_header_layout" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewOrder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/recyclerview_item_domain"
            android:layoutAnimation="@anim/layout_animation_fall_down">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
    <TextView
        android:id="@+id/no_search_results_found_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_search_results_found"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:visibility="invisible" />
</RelativeLayout>