<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/bg_corner_white_10"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="7dp">


            <TextView
                android:id="@+id/tvTitleAlertDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="Title"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tvDescAlertDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llBottomView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:gravity="end">

                <TextView
                    android:id="@+id/tvCancelAlertDialog"
                    style="@style/logout_button"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:textColor="@color/white"
                    tools:ignore="RtlCompat"/>
                <TextView
                    android:id="@+id/tvOkAlertDialog"
                    style="@style/alert_button"
                    android:layout_marginStart="5dp"

                    android:gravity="center"
                    android:text="@string/ok"
                    android:textAllCaps="true"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:textColor="@color/white"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>