<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".fragments.EarningFragment">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize">

        <ImageView
            android:id="@+id/myDomainBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            android:padding="15dp"
            android:src="@drawable/ic_back_24" />

        <TextView
            android:id="@+id/tolbar_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/myDomainBack"
            android:text="@string/subdomain_list"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="normal" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_below="@+id/toolbar"
        android:id="@+id/search_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="0dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_gradient">

            <ImageView
                android:id="@+id/search_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/clear_search_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/ic_clear"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/grey"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/voice_search_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/ic_mic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/search_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:background="@android:color/transparent"
                android:hint="@string/search_domain"
                android:inputType="text"
                android:paddingTop="8dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColorHint="@color/colorHintGrey"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/search_image_view"
                app:layout_constraintEnd_toStartOf="@id/voice_search_query"
                app:layout_constraintStart_toEndOf="@id/search_image_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_card_view"
        app:cardCornerRadius="0dp"
        android:layout_marginHorizontal="0dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gradient"
            android:orientation="vertical">

            <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:background="#51F44336"
                android:text="All Booked Subdomain"
                android:textStyle="bold"
                android:textColor="@color/buttonRedcolor"/>-->
            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#51F44336"
                android:stretchColumns="1,2,3,4">

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.10"
                        android:background="@drawable/cell_back_table"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="ID"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.50"
                        android:background="@drawable/cell_back_table"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="Subdomain Link"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.20"
                        android:background="@drawable/cell_back_table"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="Status"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.20"
                        android:background="@drawable/cell_back_table"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="Booked Date"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewOrderDomain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutAnimation="@anim/layout_animation_fall_down" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/no_search_results_found_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_search_results_found"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:visibility="invisible" />

</RelativeLayout>